welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: Missing closing brace `}' assumed here
var h:Int=0
^Array1:2: error: expected class or object definition
var h:Int=0
^Array1:3: error: expected class or object definition
h=getMondeHauteur()
^Array1:4: error: expected class or object definition
var T=new Array[Color](h)
^Array1:5: error: expected class or object definition
var c:Color=Color.white
^Array1:7: error: expected start of definition
override def run() {
         ^